name:                happy-plus-alex
version:             1.0.0.0
synopsis:            Simple template for combinig Happy and Alex
-- description:         
homepage:            http://blog.codersbase.com
license:             BSD3
license-file:        LICENSE
author:              Jason Dagit
maintainer:          dagitj@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable expression
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >= 3 && < 5
                     , happy-plus-alex
  build-tools:         happy
                     , alex
  ghc-options: -Wall

library
  build-depends:       base >= 3 && < 5
                     , array
  hs-source-dirs:      src
  exposed-modules:     Language
                       Lexer
                       Parser
  ghc-options: -Wall
